# ELPH

BAC_110_version2/: main.cc  main.cc~
BAC_110_version2/include/: BACDetectorConstruction_aerogel3_mppc4.hh  MPPCSD.hh~
BAC_110_version2/src/: AeroHit.cc~  BACAnalysisManager.cc  BACAnalysisManager.cc~  BACDetectorConstruction_aerogel3_mppc4.cc  BACDetectorConstruction_aerogel3_mppc4.cc~  BACPrimaryGeneratorAction.cc~  BACRunAction.cc  MPPCHit.cc  MPPCHit.cc~
BAC_COSMIC/data/: 221013.root  221013_pedestal.root
BAC_ELPHtest/: README.txt  analysis.cc  analysis.cc~  analysis_0.cc~  analysis_2.cc  analysis_2.cc~  analysis_E72.cc  analysis_E72.cc~  analysis_E72_167.cc  analysis_E72_167.cc~  analysis_compare.cc  analysis_pos.cc  analysis_pos.cc~  comment.txt  inefficiency.cc  inefficiency.cc~  npe_picture.cc  npe_picture.cc~  parameter_-10.root  parameter_-11.root  parameter_-23.root  parameter_-35.root  parameter_0.root  parameter_12.root  parameter_13.root  parameter_9999.root  trigger.cc  trigger.cc~  withoutbeam.cc  withoutbeam.cc~
BAC_ELPHtest/data/: run00079.root  run00306.root  sum_-2cm.root  sum_-4cm.root  sum_0cm.root  sum_2cm.root  sum_4cm.root
BAC_LED/: arrange.cc  arrange.cc~  comment.txt  gain_check.cc  gain_check.cc~
BAC_LED/ELPH_LED_data/: run00219.root  run00225.root  run00227.root  run00228.root  run00229.root  run00231.root  run00232.root  run00233.root  run00234.root  run00235.root  run00236.root  run00237.root  run00238.root  run00239.root  run00240.root  run00241.root  run00242.root  run00243.root  run00244.root  run00245.root  run00246.root  run00247.root  run00248.root  run00249.root  run00250.root  run00251.root  run00252.root  run00253.root  run00254.root  run00255.root  run00256.root  run00257.root  run00258.root  run00259.root  run00260.root  run00261.root  run00262.root  run00263.root  run00264.root  run00265.root  (+1 more)
BAC_LED/LED_modified/: BAC1_ELPH_LED.root  BAC1_ELPH_pedestal.root  BAC1_LED.root  BAC1_pedestal.root  BAC2_ELPH_LED.root  BAC2_ELPH_pedestal.root  BAC2_LED.root  BAC2_pedestal.root  BAC3_ELPH_LED.root  BAC3_ELPH_pedestal.root  BAC3_LED.root  BAC3_pedestal.root  BAC4_ELPH_LED.root  BAC4_ELPH_pedestal.root  BAC4_LED.root  BAC4_pedestal.root
BAC_simple/BACsimul/: main.cc~
BAC_simple/BACsimul_167/: CMakeLists.txt~  main.cc  main.cc~
BAC_total_simulation/: CMakeLists.txt  main.cc  main.cc~  vis.mac
BAC_total_simulation/include/: AeroHit.hh  BACAnalysisManager.hh  BACDetectorConstruction_110_3.hh  BACDetectorConstruction_110_3_par.hh  (+5 more)
BAC_version_compare/: README.txt  npe_total.cc  simul_1.root  simul_2.root  simul_3.root  simul_4.root  simul_5.root  simul_6.root  simul_7.root  simul_8.root  version_npe.cc  version_npe.cc~
E72simul/: CMakeLists.txt  main.cc
E72simul/include/: AeroSD.hh  BACAnalysisManager.hh  BACDetectorConstruction.hh
E72simul/src/: AeroHit.cc~  BACAnalysisManager.cc  BACDetectorConstruction.cc  BACPrimaryGeneratorAction.cc~  BACStackingAction.cc  MPPCSD.cc~
ELPHsimul/: main.cc
(+78 files in other folders)
